Updated PHPUnit config.

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "test": "phpunit --no-coverage",
         "test-coverage": "phpunit",
         "docs": "php docs.php",
-        "docs-lint": "php docs.php --fail-on-change"
+        "docs-lint": "php docs.php --fail-on-change",
+        "reset": "rm -Rf vendor composer.lock"
     }
 }
